  * Adding support for templates
    * Templates define a series of stickies
    * Once created, a template can Generate Stickies for the project, with due_date (+1.day, +2.weeks, +5.weeks)
  * Calendar View is now available for Stickies with a Due Date
    * New Stickies with Due Date can be created directly from Due Date calendar by hovering over the date and clicking the new sticky icon

== 0.10.0

* Enhancements
  * Stickies can now have Due Dates
  * Sticky start date and sticky end date are now automatically set
    * Start Date set when the sticky is created
    * End Date set when the sticky status is changed from planned or ongoing to completed
    * End Date is cleared when status is changed from completed to planned or ongoing
  * Stickies can now be sorted by id, status, and due date
  * Projects Index has been simplified and now displays:
    * Number of stickies that are past due, due today, and due this week
    * Owner, editors, and viewers on project
  * Using Rails 3.1.3 and Contour ~> 0.6.0
  
== 0.9.0

* Enhancements
  * Using Rails 3.1.1, Ruby 1.9.3.p0, and Contour 0.5.6
  * Emails sent by notes now:
    * Have consistent subjects lines
    * Sticky Added email now displays who is assigned to the sticky
  * Right and Left Keyboard clicks now navigate between frames on the project show page

* Bug Fix
  * Deleting a frame now moves the associated stickies to the project backlog

* Testing
  * Analyzing test coverage using SimpleCov gem, test coverage now at 92%

== 0.8.0

* Enhancements
  * Emails are now sent for stickies when they are completed, can be disabled in user settings
  * Owners who can edit a project or a sticky can now
    * delete comments attached to the project or sticky
    * move comments to another between project or sticky

== 0.7.3

* Refactoring
  * Updating to Contour version 0.5.0

== 0.7.2

* Refactoring
  * Updating to Contour version 0.4.0

== 0.7.1

* Refactoring