@@ -14,7 +14,9 @@
             class="<%= 'calendar-entry-body-today' if iDate == Date.today %>
                    <%= 'last-month' if iDate < @start_date %>
                    <%= 'next-month' if iDate > @end_date %>"
-            onmouseover="$(this).addClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').show();" onmouseout="$(this).removeClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').hide();">
+            onmouseover="$(this).addClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').show();"
+            onmouseout="$(this).removeClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').hide();"
+            onclick="$('#selected_date').val('<%= iDate.strftime('%m/%d/%Y') %>');$('#selected_date').change()">
           <div style="width:100%">
             <div class="calendar-entry-heading">
               <%= link_to image_tag('contour/addfile.png', :style => 'border:none;vertical-align:text-bottom', :size => '11x11', :title => "New Sticky due on #{iDate.strftime("%B %e, %Y")}"), new_sticky_path(:sticky => {:due_date => iDate}, :from_calendar => 1), :style => 'display:none', :id => "calendar_box_#{first_day_offset}_new_entry_link" %>
@@ -28,7 +30,7 @@
               <%# @stickies.with_due_date_for_calendar(iDate,iDate).order('stickies.project_id, stickies.id').each do |sticky| %>
               <%# @stickies.where(:start_date => iDate).order('stickies.project_id, stickies.id').each do |sticky| %>
               <% case params[:date_type] when 'start_date' %>
-                <% @stickies.where(:start_date => iDate).order('stickies.project_id, stickies.id').each do |sticky| %>
+                <% @stickies.where(:start_date => iDate).group(:project_id).order(:id).each do |sticky| %>
                   <%= @sticky = sticky; render partial: 'popup' %>
                 <% end %>
               <% when 'end_date' %>
