@@ -1,0 +1,25 @@
+Hello <%= @user.first_name %>,<br />
+<br />
+<% if @user.all_stickies_past_due.size > 0 %>
+You have <%= pluralize @user.all_stickies_past_due.size, 'sticky' %> past due.<br />
+<ul>
+<% @user.all_stickies_past_due.order(:due_date).each do |sticky| %>
+<li><%= link_to sticky.name, "#{SITE_URL}/stickies/#{sticky.id}" %> <% if sticky.owner %>Assigned To: <b><%= sticky.owner.name %></b><% end %></li>
+<% end %>
+</ul>
+<br />
+<% end %>
+<% if @user.all_stickies_due_today.size > 0 %>
+You have <%= pluralize @user.all_stickies_due_today.size, 'sticky' %> due today.<br />
+<ul>
+<% @user.all_stickies_due_today.order(:start_date).each do |sticky| %>
+<li><%= link_to sticky.name, "#{SITE_URL}/stickies/#{sticky.id}" %> <% if sticky.owner %>Assigned To: <b><%= sticky.owner.name %></b><% end %></li>
+<% end %>
+</ul>
+<br />
+<% end %>
+View stickies on a calendar here: <%= link_to SITE_URL, "#{SITE_URL}/stickies/calendar" %><br />
+<br />
+Thank you!<br />
+<br />
+<%= DEFAULT_APP_NAME %> System Mailer
