@@ -1,0 +1,23 @@
+Hello <%= @user.first_name %>,
+
+<% if @user.all_stickies_past_due.size > 0 %>
+You have <%= pluralize @user.all_stickies_past_due.size, 'sticky' %> past due.
+
+<% @user.all_stickies_past_due.order(:due_date).each do |sticky| %>
+    <%= sticky.name %> <%= "#{SITE_URL}/stickies/#{sticky.id}" %><% if sticky.owner %>    Assigned To: <%= sticky.owner.name %><% end %>
+<% end %>
+
+<% end %>
+<% if @user.all_stickies_due_today.size > 0 %>
+You have <%= pluralize @user.all_stickies_due_today.size, 'sticky' %> due today.
+
+<% @user.all_stickies_due_today.order(:start_date).each do |sticky| %>
+    <%= sticky.name %> <%= "#{SITE_URL}/stickies/#{sticky.id}" %><% if sticky.owner %>    Assigned To: <%= sticky.owner.name %><% end %>
+<% end %>
+
+<% end %>
+View stickies on a calendar here: <%= "#{SITE_URL}/stickies/calendar" %>
+
+Thank you!
+
+<%= DEFAULT_APP_NAME %> System Mailer
